# Lightmap_Baking

./: CMakeLists.txt  README.md
Assets/Shaders/: Blinn_Phong.fs  Blinn_Phong.vs  Model.fs
Source/: CMakeLists.txt  Define.cpp  Define.h  Light_Baking.cpp  Light_Baking.h  Lightmap_Baking.cpp  Lightmap_Baking.h  Scene_Rendering.cpp  Scene_Rendering.h  main.cpp  temp.cpp
Source/Application/: Application.cpp  Application.h  CameraController.cpp  CameraController.h
Source/Application/Renderer/: SceneBake.cpp  SceneBake.h  SceneRenderer.cpp  SceneRenderer.h
Source/Component/: Camera.cpp  Camera.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelLoader.h  Shader.cpp  Shader.h  TextureLoader.h
Source/Core/: BakingThread.cpp  BakingThread.h  Input.cpp  Input.h  RenderingThread.cpp  RenderingThread.h  Time.cpp  Time.h
Source/Utils/: ModelLoader.cpp  ModelLoader.h  TextureLoader.cpp
